--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ Temporary Items
 .apdisk
 
 # Rust
-/target/
+/target
+**/target
 Cargo.lock
 
 # Terraform
@@ -48,4 +49,10 @@ override.tf.json
 
 # Include provider configuration and state files
 .terraformrc
-terraform.rc 
+terraform.rc
+
+# Ignore all .env files
+.env
+.env.*
+**/.env
+**/.env.* 
