--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,7 +2,7 @@
 
 install:
 	cargo install --path=oracle --locked
-	cargo install --path=frontend --locked
+	cargo install --path=gateway --locked
 
 run: install
 	python3 ./test.py
