--- a/backend/gateway/Cargo.toml
+++ b/backend/gateway/Cargo.toml
@@ -16,3 +16,7 @@ futures = { workspace=true }
 tokio-stream = "0.1"
 env_logger = "0.8"
 log = { workspace=true }
+snarkvm = {workspace=true }
+
+[dependencies.rand_core]
+version = "0.6"
