--- a/backend/gateway/Cargo.toml
+++ b/backend/gateway/Cargo.toml
@@ -17,3 +17,4 @@ tokio-stream = "0.1"
 env_logger = "0.8"
 log = { workspace=true }
 snarkvm = {workspace=true }
+reqwest = { version="0.12", features=["json"] }
